--- a/Modulos_para_grib.ipynb
+++ b/Modulos_para_grib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4ce5cc7b",
+   "id": "46e00a6a",
    "metadata": {},
    "source": [
     "# Módulos útiles para ficheros grib"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bffda61",
+   "id": "22c93ad5",
    "metadata": {},
    "source": [
     "Para abrir el notebook en Colab pulsa el botón:"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbe1581e",
+   "id": "23ba727b",
    "metadata": {},
    "source": [
     "<a href=\"https://colab.research.google.com/github/jlcasador/curso_formatos_meteo/blob/main/Modulos_para_grib.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17aeddbc",
+   "id": "68a17f77",
    "metadata": {},
    "source": [
     "[GRIB](https://confluence.ecmwf.int/display/CKB/What+are+GRIB+files+and+how+can+I+read+them) es un acrónimo cuyas siglas corresponden a \"General Regularly distributed Information in Binary form\".  \n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a374cd86",
+   "id": "e572daea",
    "metadata": {},
    "source": [
     "Esta foto puede representar la jerarquía de paquetes que vamos a usar en este curso:"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fda1ff14",
+   "id": "5e968427",
    "metadata": {},
    "source": [
     "![jerarquía de módulos](matroshka_grib_60.jpg)"
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a3f9b8a",
+   "id": "a6d4a557",
    "metadata": {},
    "source": [
     "### Instalación"
@@ -59,16 +59,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5c22c97",
+   "id": "c6a516a5",
    "metadata": {},
    "source": [
     "#### Instalación de eccodes utilizando CMake"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bcb81bd2",
+   "metadata": {},
+   "source": [
+    "Para instalar eccodes podemos seguir las [instrucciones de instalación de la web del ECMWF](https://confluence.ecmwf.int/display/ECC/ecCodes+installation), como sigue: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51ac1a3c",
+   "id": "2226e674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,11 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e098a392",
+   "execution_count": null,
+   "id": "26b31d2c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Para poder encontrar las grib tools\n",
     "import os\n",
     "PATH = os.getenv('PATH')\n",
     "os.environ['PATH'] = ':'.join([PATH, '/content/build/eccodes/bin'])"
@@ -97,75 +106,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b0f37b3",
+   "id": "ee85521f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!wget https://github.com/waveology/tests/raw/main/local_grib_definitions.rar\n",
-    "!wget https://github.com/waveology/tests/raw/main/data.grib\n",
-    "!unrar x -o+ /content/local_grib_definitions.rar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "a6952cc3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r\n",
-      "ecCodes Version 2.28.0\r\n",
-      "\r\n",
-      "Definition files path from environment variable ECCODES_DEFINITION_PATH=/usr/local/apps/gcc/11.2.0/eccodes/2.28.0/share/eccodes/definitions:/usr/local/apps/global/harmonie_definitions/1.1/grib/definitions\r\n",
-      "Full definition files path=/usr/local/apps/gcc/11.2.0/eccodes/2.28.0/share/eccodes/definitions:/usr/local/apps/global/harmonie_definitions/1.1/grib/definitions\r\n",
-      "\r\n",
-      "Default SAMPLES path is used: /usr/local/apps/gcc/11.2.0/eccodes/2.28.0/share/eccodes/samples\r\n",
-      "SAMPLES path can be changed by setting the ECCODES_SAMPLES_PATH environment variable.\r\n",
-      "\r\n"
-     ]
-    }
-   ],
    "source": [
     "!codes_info"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2572caad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.environ['GRIB_DEFINITION_PATH'] = '/content/local_grib_definitions:/usr/local/share/grib_api/definitions'"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "a66fc9f8",
+   "id": "2e936841",
    "metadata": {},
    "source": [
     "#### Instalación de eccodes con Conda"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efd8eb87",
+   "cell_type": "markdown",
+   "id": "4316dba7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!wget https://github.com/waveology/tests/raw/main/local_grib_definitions.rar\n",
-    "!wget https://github.com/waveology/tests/raw/main/data.grib\n",
-    "!unrar x -o+ /content/local_grib_definitions.rar && rm -rf /content/local_grib_definitions.rar"
+    "Otra alternativa es instalar conda, y después instalar eccodes desde conda:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f027bf23",
+   "id": "3b3ada20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b8f055",
+   "id": "5bf77fd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "535518d6",
+   "id": "1e9aac75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,20 +162,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fadf10a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ['GRIB_DEFINITION_PATH'] = '/content/local_grib_definitions:/usr/local/share/grib_api/definitions'\n",
-    "!echo $GRIB_DEFINITION_PATH"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "ba665989",
+   "id": "31564a71",
    "metadata": {},
    "source": [
     "#### Instalación de otros paquetes"
@@ -217,36 +172,150 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "874f1dc3",
+   "id": "b69b324d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install xarray # xarray está instalado por defecto\n",
-    "!pip install cartopy\n",
-    "# metview\n",
+    "# Notar que xarray está instalado por defecto en este entorno\n",
+    "!conda install -c conda-forge cfgrib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8cc2f52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install metview-batch -c conda-forge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eab9b9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install metview-python -c conda-forge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60a8f35f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install -c conda-forge cartopy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0163d33d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#!pip install climetlab"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5c6d3f58",
+   "id": "d43108e5",
    "metadata": {},
    "source": [
-    "### Grib_tools"
+    "#### Ficheros de ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2a53a11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://owncloud.aemet.es/index.php/s/tpl9SuZ16HeByJA/download -O ecmwf_surface.grib\n",
+    "!wget https://owncloud.aemet.es/index.php/s/XsRZh7OezHwcARx/download -O air_quality.grb2"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ad30b0fe",
+   "id": "fd2ea87f",
+   "metadata": {},
+   "source": [
+    "### Estructura de un fichero grib. Grib_tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f147020",
+   "metadata": {},
+   "source": [
+    "- Unas palabras sobre gribs\n",
+    "- grib1 y grib2\n",
+    "- conversiones grib1 a grib2, a netcdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "746ae803",
+   "metadata": {},
+   "source": [
+    "https://library.wmo.int/index.php?lvl=notice_display&id=10684"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f8d2e7b",
+   "metadata": {},
+   "source": [
+    "Las [grib keys](https://confluence.ecmwf.int/display/ECC/GRIB+Keys) son metadatos de cada mensaje grib. Nos informan sobre características tales como.\n",
+    "Algunas keys importantes son:\n",
+    "- centre: centro de origen del grib (notar que cada centro tendrá su tabla de definiciones)\n",
+    "- edition: indica si el fichero grib es de tipo 1 o 2\n",
+    "- gridType: tipo de grid (por ejemplo, regular_ll)\n",
+    "- table2Version: tabla de parámetros a la que pertenece el parámetro\n",
+    "- indicatorOfParameter: parámetro (para grib1)\n",
+    "- level: nivel\n",
+    "- paramId: key computada que el ECMWF utiliza para facilitar la identificación del parámetro \n",
+    "- dataDate: fecha de ejecución del modelo\n",
+    "- dataTime: hora de ejecución del modelo (\"pasada\")\n",
+    "- step: alcance (normalmente en horas)\n",
+    "- shortName: nombre corto del parámetro (depende de la tabla de definiciones)\n",
+    "- name: nombre largo del parámetro (depende de la tabla de definiciones)\n",
+    "\n",
+    "Otras keys dan información sobre la distribución espacial de los puntos:\n",
+    "- longitudeOfFirstGridPointInDegrees\n",
+    "- latitudeOfFirstGridPointInDegrees\n",
+    "- longitudeOfLastGridPointInDegrees\n",
+    "- latitudeOfLastGridPointInDegrees\n",
+    "- iDirectionIncrementInDegrees\n",
+    "- jDirectionIncrementInDegrees\n",
+    "- Ni\n",
+    "- Nj"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eac02a28",
    "metadata": {},
    "source": [
     "Las [grib tools](https://confluence.ecmwf.int/display/ECC/GRIB+tools) son un conjunto de comandos que permiten "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "96eb0c89",
+   "metadata": {},
+   "source": [
+    "grib_ls muestra el contenido de algunas keys de un fichero grib. Da una línea por cada mensaje grib:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "291e5c61",
+   "id": "af8141de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "634f7dc9",
+   "id": "463c40ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,9 +334,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da169ea4",
+   "metadata": {},
+   "source": [
+    "grib_dump nos da el valor de todas las keys codificadas del grib:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60f2ca70",
+   "id": "64fb010a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +353,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "850652ef",
+   "id": "a84206ef",
+   "metadata": {},
+   "source": [
+    "Para aclarar qué código corresponden a cada parámetro podemos consultar las [tablas de parámetros](https://codes.ecmwf.int/grib/param-db/). Estas tablas son válidas para gribs procedentes del ECMWF."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7bd9247",
    "metadata": {},
    "source": [
     "### Módulo eccodes"
@@ -284,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a83a7bcb",
+   "id": "434ff8a7",
    "metadata": {},
    "source": [
     "https://sites.ecmwf.int/docs/eccodes/namespaceec_codes.html"
@@ -293,17 +378,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d72e7f5",
+   "id": "bf7da5d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eccodes import *"
+    "import eccodes as ec"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b699a700",
+   "id": "7df45b94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,37 +398,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00c55f08",
+   "id": "ebb64638",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gid = codes_new_from_file(f, CODES_PRODUCT_GRIB)"
+    "gid = ec.codes_new_from_file(f, CODES_PRODUCT_GRIB)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65b5d3b",
+   "id": "2dd2b641",
    "metadata": {},
    "outputs": [],
    "source": [
-    "codes_get(gid, \"paramId\")"
+    "ec.codes_get(gid, \"paramId\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62e495bc",
+   "id": "99c537f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "codes_release(gid)"
+    "ec.codes_release(gid)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52775f3d",
+   "id": "9ed05e7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,15 +437,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fe11f99",
+   "id": "7dabfd52",
    "metadata": {},
    "source": [
-    "Efecto de la interfaz de python:"
+    "La API original está escrita en C, y permite manejar la memoria directamente leyendo cada uno de los mensajes del fichero grib:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "88850f5e",
+   "id": "8e305768",
    "metadata": {},
    "source": [
     "![flujo basico C](flujo_basico_C.png)"
@@ -368,7 +453,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0301d1c",
+   "id": "de21898c",
+   "metadata": {},
+   "source": [
+    "La interfaz de python nos oculta la mayor parte de la gestión de memoria (pero cuidado con codes_release!), evitándonos este trabajo extra:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f9b4093",
    "metadata": {},
    "source": [
     "![flujo_basico_python](flujo_basico_python.png)"
@@ -376,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b735c3ff",
+   "id": "4e29177c",
    "metadata": {},
    "source": [
     "Algo un poco más complicado:"
@@ -385,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d8944f0",
+   "id": "f46815fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,15 +488,15 @@
     "    values = {}\n",
     "    \n",
     "    while True:\n",
-    "        gid = codes_new_from_file(f, CODES_PRODUCT_GRIB)\n",
+    "        gid = ec.codes_new_from_file(f, CODES_PRODUCT_GRIB)\n",
     "        if gid is None: break\n",
     "        \n",
-    "        paramid = codes_get(gid, \"paramId\")\n",
-    "        step = codes_get(gid, \"step\")\n",
+    "        paramid = ec.codes_get(gid, \"paramId\")\n",
+    "        step = ec.codes_get(gid, \"step\")\n",
     "        if paramid==input_paramid:\n",
-    "            values[step] = codes_grib_find_nearest(gid, latitude, longitude)[0].value\n",
+    "            values[step] = ec.codes_grib_find_nearest(gid, latitude, longitude)[0].value\n",
     "        \n",
-    "        codes_release(gid)\n",
+    "        ec.codes_release(gid)\n",
     "\n",
     "    f.close()\n",
     "    \n",
@@ -413,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3b8a410",
+   "id": "0885a870",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +515,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c07f034e",
+   "id": "e145ef7d",
+   "metadata": {},
+   "source": [
+    "### Módulo metview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e22a2311",
    "metadata": {},
    "source": [
     "https://www.ecmwf.int/en/newsletter/169/computing/advanced-regridding-metview"
@@ -430,15 +531,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4e21fd9",
+   "id": "44d74e67",
    "metadata": {},
    "source": [
     "https://metview.readthedocs.io/en/latest/"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89e57f38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "410c06e2",
+   "id": "30ac1057",
    "metadata": {},
    "source": [
     "### Módulo xarray"
@@ -447,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8a31adf",
+   "id": "3ce89919",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08d6ab79",
+   "id": "af9fed23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,9 +578,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1d84c9e",
+   "metadata": {},
+   "source": [
+    "Notar que xarray (con cfgrib) solo puede leer correctamente [gribs homogéneos](https://github.com/ecmwf/cfgrib/blob/master/README.rst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3a20322",
+   "metadata": {},
+   "source": [
+    "Seleccionamos el campo de la temperatura a 2m, para el alcance h+12:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd2a594",
+   "id": "5fcf7f26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "783f2d8c",
+   "id": "dfd0944e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,9 +614,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7865d88",
+   "metadata": {},
+   "source": [
+    "O, si usamos cartopy para mostrar el mapa en proyección Mercator, por ejemplo, e incluímos la línea de costa:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d544c5",
+   "id": "9cc819d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,14 +638,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1af815d",
+   "id": "6fdcc501",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e9895357",
+   "id": "f1773a9c",
    "metadata": {},
    "source": [
     "### Módulo climetlab"
@@ -521,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5f75819",
+   "id": "5aca69c1",
    "metadata": {},
    "outputs": [],
    "source": []
